# AI_Native_Pretraining_Curation

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md  judge_mini_corpus.jsonl
docs/: architecture.md
examples/: full_loop.py  quickstart.py  spot_check.py
huggingface/: README.md  build_benchmark.py  extraction_mutation_bench.jsonl
paper/: AutoCurate_AI_Native_Pretraining_Data.docx  AutoCurate_AI_Native_Pretraining_Data.md  paper.md
results/: e1_gate_oracle.json  e2_cascade.json  e3_hillclimb.json  e4_drift.json  e5_outliers.json  e6_drift_recovery.json  e7_baselines.json  summary.json
scripts/: build_paper_docs.py  make_figures.py  run_experiments.py  run_llm_e2.py
src/autocurate/: __init__.py  baselines.py  cli.py  datagen.py  experiments.py  judge.py  lexicons.py  metrics.py  pipeline.py  report.py  schema.py  svgplot.py  utils.py
src/autocurate/agentloop/: __init__.py  ledger.py  routine.py  spc.py
src/autocurate/extract/: __init__.py  base.py  html_gate.py  json_gate.py  ocr_gate.py
src/autocurate/hillclimb/: __init__.py  agentic.py  base.py  offline.py
src/autocurate/profile/: __init__.py  heuristics.py  outliers.py
src/autocurate/verify/: __init__.py  corruptions.py  harness.py
tests/: conftest.py  test_agentloop.py  test_extract_gates.py  test_pipeline_metrics.py  test_profile.py  test_results_reproduce.py  test_smoke_cli.py  test_verify_hillclimb.py
